--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  region: "us-east"
+  region: "us-east-2"
   app: "react-docker"
   env: "ReactDocker-env"
   bucket_name: "elasticbeanstalk-us-east-2-395604674087"
